@@ -10,13 +10,14 @@ import org.springframework.stereotype.Repository;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentSkipListMap;
 
 @Repository
 @Primary
 public class CommentInMemoryRepository implements CommentRepository {
 
     private final InMemoryRepository<Comment> delegate;
-    private final Map<Long, List<Comment>> postIdIndex =  new ConcurrentHashMap<>();
+    private final Map<Long, ConcurrentSkipListMap<LocalDateTime, Comment>> postIdIndex = new ConcurrentHashMap<>();
 
     public CommentInMemoryRepository(AtomicLongIdGenerator idGenerator) {
         this.delegate = new InMemoryRepository<>(idGenerator);
@@ -25,11 +26,9 @@ public class CommentInMemoryRepository implements CommentRepository {
     @Override
     public Comment save(Comment comment) {
         Comment saved = delegate.save(comment);
-        postIdIndex.compute(saved.getPostId(), (k, list) ->
-                Optional.ofNullable(list)
-                        .map(l -> { l.add(saved); return l; })
-                        .orElseGet(() -> new ArrayList<>(List.of(saved)))
-        );
+        postIdIndex
+                .computeIfAbsent(saved.getPostId(), k -> new ConcurrentSkipListMap<>())
+                .putIfAbsent(saved.getCreatedAt(), saved);
         return saved;
     }
 
@@ -40,21 +39,27 @@ public class CommentInMemoryRepository implements CommentRepository {
 
     @Override
     public List<Comment> findByPostId(Long postId) {
-        List<Comment> comments = postIdIndex.get(postId);
-        if (comments == null) return Collections.emptyList();
-        return List.copyOf(comments); // 원본 배열 보호
+        ConcurrentSkipListMap<LocalDateTime, Comment> createdAtIndex = postIdIndex.get(postId);
+        if (createdAtIndex == null) return Collections.emptyList();
+        return List.copyOf(createdAtIndex.values()); // 원본 배열 보호
     }
 
     @Override
     public CursorPage<Comment> findAllByPostIdOrderByCreatedAtDesc(Long postId, LocalDateTime cursor, int pageSize) {
-        List<Comment> content = postIdIndex.get(postId).stream()
-                .filter(comment -> cursor == null || comment.getCreatedAt().isBefore(cursor))
-                .sorted(Comparator.comparing(Comment::getCreatedAt).reversed())
+        ConcurrentSkipListMap<LocalDateTime, Comment> createdAtIndex =
+                postIdIndex.getOrDefault(postId, new ConcurrentSkipListMap<>());
+
+        NavigableMap<LocalDateTime, Comment> window = (cursor == null)
+                        ? createdAtIndex.descendingMap()
+                        : createdAtIndex.headMap(cursor, false).descendingMap();
+
+        List<Comment> paged = window.values().stream()
                 .limit(pageSize + 1)
                 .toList();
-        boolean hasNext = content.size() > pageSize;
 
-        return new CursorPage<>(content.subList(0, Math.min(content.size(), pageSize)), hasNext);
+        boolean hasNext = paged.size() > pageSize;
+
+        return new CursorPage<>(paged.subList(0, Math.min(paged.size(), pageSize)), hasNext);
     }
 
     @Override
@@ -69,10 +74,9 @@ public class CommentInMemoryRepository implements CommentRepository {
 
         postIdIndex.computeIfPresent(
                 target.get().getPostId(),
-                (key, list) -> {
-                    list.remove(target.get());
-                    return list;
-                }
-        );
+                (k, idx) -> {
+                    idx.remove(target.get().getCreatedAt());
+                    return idx;
+                });
     }
 }
